<resources>
    <!-- app details -->
    <string name="app_name">CRIMP</string>
    <string name="facebook_app_id">1448790512098965</string>

    <string name="toast_no_network">No network connection</string>

    <!-- Home Activity -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Hello Activity menu -->
    <string name="action_helpme">Help me</string>
    <string name="action_logout">Logout</string>
    <string name="action_task_list">Task list</string>

    <!-- Hello Activity UI -->
    <string name="hello_activity_logout_dialog_title">Logout?</string>
    <string name="hello_activity_logout_dialog">"Logout won't affect score upload."</string>
    <string name="hello_activity_logout_dialog_score">"Logout won't affect score upload..\n\nLogging out will discard your input on Score tab for %1$s, %2$s on %3$s."</string>
    <string name="hello_activity_logout_dialog_positive">Logout</string>
    <string name="hello_activity_logout_dialog_negative">Cancel</string>

    <!-- Login Activity UI -->
    <string name="login_activity_login_wait">Awaiting confirmation from admins…</string>
    <string name="login_activity_description_logo">crimp logo</string>
    <string name="login_activity_login_dialog">"Please logout from other devices before continuing."</string>
    <string name="login_activity_login_dialog_title">"Continue with login?"</string>
    <string name="login_activity_login_dialog_positive">Login</string>
    <string name="login_activity_login_dialog_negative">Cancel</string>

    <!-- Route Fragment UI -->
    <string name="route_fragment_greeting">"Hello %1$s, you are route judge for"</string>
    <string name="route_fragment_replace_title">Replace current route judge?</string>
    <string name="route_fragment_replace_question">"%1$s is already route judge for %2$s, %3$s.\n\nReplace %4$s ?"</string>
    <string name="route_fragment_replace_positive">Replace</string>
    <string name="route_fragment_replace_negative">Cancel</string>
    <string name="route_fragment_next">Next</string>
    <string name="route_fragment_refresh_dialog_title">"Refresh category and route list?"</string>
    <string name="route_fragment_refresh_dialog">"Refreshing route list will discard your input on Score tab for %1$s, %2$s on %3$s."</string>
    <string name="route_fragment_refresh_dialog_positive">Refresh</string>
    <string name="route_fragment_refresh_dialog_negative">Cancel</string>
    <string name="route_fragment_category_hint">Pick a category</string>
    <string name="route_fragment_route_hint">Pick a route</string>
    <string name="route_fragment_next_dialog_title">"Select a different route?"</string>
    <string name="route_fragment_next_dialog">"Selecting a different route will discard your input on Score tab for %1$s, %2$s on %3$s."</string>
    <string name="route_fragment_next_dialog_positive">Discard</string>
    <string name="route_fragment_next_dialog_negative">Cancel</string>

    <!-- Scan Fragment UI -->
    <string name="scan_fragment_climber_id">"Climber ID"</string>
    <string name="scan_fragment_climber_name">"Climber name (optional)"</string>
    <string name="scan_fragment_rescan">Rescan</string>
    <string name="scan_fragment_next">Next</string>
    <string name="scan_fragment_description_flash">flash button</string>
    <string name="scan_fragment_rescan_dialog_title">"Rescan QR code?"</string>
    <string name="scan_fragment_rescan_dialog_name">"Rescan will discard your input on Score tab for %1$s, %2$s on %3$s."</string>
    <string name="scan_fragment_rescan_dialog">"Rescan will discard your input on Score tab for %1$s on %2$s."</string>
    <string name="scan_fragment_rescan_dialog_positive">Rescan</string>
    <string name="scan_fragment_rescan_dialog_negative">Cancel</string>
    <string name="scan_fragment_remove_dialog_title">"Remove climber?"</string>
    <string name="scan_fragment_remove_dialog_name">"Removing current climber will discard your input on Score tab for %1$s, %2$s on %3$s."</string>
    <string name="scan_fragment_remove_dialog">"Removing current climber will discard your input on Score tab for %1$s on %2$s."</string>
    <string name="scan_fragment_remove_dialog_positive">Remove</string>
    <string name="scan_fragment_remove_dialog_negative">Cancel</string>

    <!-- Score Fragment UI -->
    <string name="score_fragment_climber_id">Climber ID</string>
    <string name="score_fragment_climber_name">Climber Name</string>
    <string name="score_fragment_accumulated_score">Accumulated Score</string>
    <string name="score_fragment_current_score">Current Score</string>
    <string name="score_fragment_submit">Submit</string>
    <string name="score_fragment_submit_dialog_title">"Submit score?"</string>
    <string name="score_fragment_submit_dialog_positive">Submit</string>
    <string name="score_fragment_submit_dialog_negative">Cancel</string>
    <string name="score_fragment_close_dialog_title">"Discard score?"</string>
    <string name="score_fragment_close_dialog_positive">Discard</string>
    <string name="score_fragment_close_dialog_negative">Cancel</string>

    <!-- TaskList Activity UI -->
    <string name="tasklist_activity_counter_zero">No pending upload. Good job!</string>
    <string name="tasklist_activity_counter">Score upload task left: %1$d</string>
    <string name="tasklist_activity_category_route">%1$s, %2$s</string>
    <string name="tasklist_activity_climber">Climber: %1$s</string>
    <string name="tasklist_activity_score">Score: %1$s</string>
    <string name="tasklist_activity_status_idle">Status: Idle</string>
    <string name="tasklist_activity_status_uploading">Status: Uploading…</string>
    <string name="tasklist_activity_status_error_no_network">Status: No network connection</string>
    <string name="tasklist_activity_status_error_http">Status: %1$d %2$s</string>
    <string name="tasklist_activity_status_error_exception">Status: %1$s</string>

    <string name="tasklist_activity_delete_task_dialog_title">"Delete task?"</string>
    <string name="tasklist_activity_delete_task_dialog">"Deleting this task will discard this score upload. Make a note of this climber id before deletion. \n\nAre you sure you want to delete this task?"</string>
    <string name="tasklist_activity_delete_task_dialog_positive">Delete</string>
    <string name="tasklist_activity_delete_task_dialog_negative">Cancel</string>

    <!-- Permission UI -->
    <string name="permission_dialog_title">Permission required</string>
    <string name="permission_dialog_message">To use QR code scanning feature, allow CRIMP acces to your camera so you can scan QR codes.\n\nGo to App info &gt; permissions to allow access.</string>
    <string name="permission_dialog_positive">Go to App info</string>


    <!-- Address Activity UI -->
    <string name="address_activity_hint">competition-name</string>
    <string name="address_activity_next">Next</string>

    <!-- Login Activity 2 UI -->
    <string name="login_activity_2_greeting">Login to begin</string>



    <!-- Account authenticator UI -->
    <string name="authenticator_label">CRIMP</string>
    <string name="error_message_add_account_outside_app">Please add account by signing in through Crimp</string>
</resources>
