<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rocks.crimp.crimp.hello.score.ScoreFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout android:id="@+id/score_card_view_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/score_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView android:id="@+id/score_close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_highlight_off_black_36dp"/>

                <TextView
                    android:id="@+id/score_category_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toLeftOf="@id/score_close_button"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    tools:text="Novice Man Qualifier"/>

                <ProgressBar android:id="@+id/score_info_progressbar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/score_close_button"
                    android:visibility="gone"
                    android:indeterminateDrawable="@drawable/progress"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/score_route_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_below="@id/score_category_text"
                    tools:text="Route 3"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/score_climberId_til"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/score_route_text"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/score_climberId_edit"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/score_fragment_climber_id"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        tools:text="NMQ003"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/score_climberName_til"
                    android:layout_toRightOf="@id/score_climberId_til"
                    android:layout_below="@id/score_route_text"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/score_climberName_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/score_fragment_climber_name"
                        tools:text="Tiffany"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/score_accumulated_til"
                    android:layout_below="@id/score_climberName_til"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/score_accumulated_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/score_fragment_accumulated_score"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:paddingRight="24dp"
                        tools:text="1111B"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/score_current_til"
                    android:layout_below="@id/score_accumulated_til"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/score_current_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/score_fragment_current_score"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        tools:text="11"/>

                </android.support.design.widget.TextInputLayout>

                <ViewStub android:id="@+id/score_score_fragment"
                    android:inflatedId="@id/score_score_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_below="@id/score_current_til"/>

                <Button
                    android:id="@+id/score_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/score_score_fragment"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:enabled="false"
                    android:text="@string/score_fragment_submit" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
